welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: not found: type color
def faireV(c:color) {
             ^MethodsPicture:9: error: not found: value c
	setCouleurBrosse(c)
                         ^MethodsPicture:11: error: not found: value color
	faireV(color.red)
               ^